# lab-01-parser

./: CMakeLists.txt  task3.cpp
include/: header.hpp  json.hpp
scripts/: checks.sh
sources/: source.cpp
tests/: test.cpp  test3.cpp
